# plug_keywords

./: .gitignore  Cargo.toml  build.rs  log.txt  test_plugin.sh
data/: database.yaml
docs/: Gemini-Brainstorm.md  README.md  Zeno_on_knowledgebase.md
src/: lib.rs
src/async_tasks/: directory.rs  mod.rs  morsels.rs  trigrams.rs
