[package]
name = "keywords"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
plugin_utils = { path = "../plugin_utils" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
once_cell = "1.21.3"
anyhow = "1"
schemars = "1"
log = "0.4.29"
chrono = "0.4.42"
env_logger = "0.11.8"
fs2 = "0.4.3"
mcp-plugin-api = "0.1.0"
